package/main/default/objects/TV_Serie__c/TV_Serie__c.object-meta.xml
<CustomObject>
    <label>TV Serie</label>
    <nameField>
        <label>TV Serie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TV Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>