package/main/default/objects/TV_Serie__c/fields/Creators__c.field-meta.xml
<CustomField>
    <fullName>Creators__c</fullName>
    <label>Creators</label>
    <type>TextArea</type>
</CustomField>