package/main/default/objects/TV_Serie__c/fields/Genres__c.field-meta.xml
<CustomField>
    <fullName>Genres__c</fullName>
    <label>Genres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Sci-Fi</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Documentary</fullName>
            </value>
            <value>
                <fullName>War</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Mystery</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Musical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>