package/main/default/objects/TV_Serie__c/fields/Logo_url__c.field-meta.xml
<CustomField>
    <fullName>Logo_url__c</fullName>
    <label>Logo_url</label>
    <type>Url</type>
</CustomField>