package/main/default/objects/TV_Serie__c/fields/Rating_sum__c.field-meta.xml
<CustomField>
    <fullName>Rating_sum__c</fullName>
    <label>Rating_sum</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.TV_Serie__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>