package/main/default/objects/TV_Serie__c/fields/Reviews__c.field-meta.xml
<CustomField>
    <fullName>Reviews__c</fullName>
    <label>Reviews</label>
    <summaryForeignKey>Review__c.TV_Serie__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>