package/main/default/objects/TV_Serie__c/fields/Year_of_production__c.field-meta.xml
<CustomField>
    <fullName>Year_of_production__c</fullName>
    <label>Year_of_production</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>