package/main/default/objects/TV_Serie__c/validationRules/Year_of_production_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_of_production_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Value(Year_of_production__c) &gt; Year(TODAY()),
Value(Year_of_production__c) &lt; 1895,
LEN(Year_of_production__c) != 4
)</errorConditionFormula>
    <errorDisplayField>Year_of_production__c</errorDisplayField>
    <errorMessage>The year of production is invalid!</errorMessage>
</ValidationRule>